# quartermaster

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  KICKOFF.md  PROMPT-FOR-RCDE.md  README.md  SECURITY.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: a6d41f18e183_initial_schema_budget_snipe.py
assets/: BRAND.md
docs/: architecture.md  decisions.md  index.md  plan-final.md  ux-mock.md
docs/background/: ebay-gate0-research.md  price-comparison-tools.md  ram-upgrade-guide.md
docs/history/: design-scaffold.md  plan-v1-draft.md  plan-v2-hardened.md
examples/: sample-alert.eml
src/quartermaster/: __init__.py  __main__.py  config.py  db.py  digest.py  evaluation.py  extract.py  fitment.py  fsm.py  fx.py  gmail.py  guard.py  health.py  ingest.py  ledger.py  listings.py  llm.py  logging.py  mail.py  models.py  pipeline.py  ram.py  serpapi.py  snipes.py  valuation.py
tests/: conftest.py  test_cli.py  test_config.py  test_digest.py  test_egress.py  test_evaluation.py  test_extract.py  test_fitment.py  test_fsm.py  test_fx.py  test_gmail.py  test_golden.py  test_guard.py  test_health.py  test_ingest.py  test_ledger.py  test_listings.py  test_llm.py  test_logging.py  test_mail.py  test_migration.py  test_models.py  test_pipeline.py  test_ram.py  test_serpapi.py  test_smoke.py  test_valuation.py
