[project]
name = "quartermaster"
version = "0.0.0"
description = "Personal value-for-fit RAM acquisition agent (ranked digest + human-approved Gixen snipe)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
# Runtime deps are added per functional block as v1 lands (plan sec.6). v0 is
# foundation only: no bidding / LLM / eBay / SPD-DB. The schema core (increment 2)
# needs only the persistence layer.
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "respx>=0.21",
  "hypothesis>=6",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=4",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quartermaster"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["alembic"]  # framework-generated env + migrations

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I isort, UP pyupgrade, B bugbear, S bandit-security,
# ASYNC async-correctness, DTZ no-naive-datetime (plan: tz-aware UTC everywhere), RUF.
select = ["E", "F", "I", "UP", "B", "S", "ASYNC", "DTZ", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=quartermaster --cov-report=term-missing"
